--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="usdToIDR_circle">#DFC30D</color>
+    <color name="cardview_bg">#D5D4D4</color>
 
 </resources>
