menambahkan intent, memperbaiki database, menambah icon, dan mengganti tema

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/pilihKonversiTextView"
@@ -12,6 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
+        android:textColor="@color/black"
         android:text="@string/konversi_textView"
         android:textSize="18dp"
         android:textStyle="bold" />
@@ -19,17 +21,15 @@
 
     <GridLayout
         android:id="@+id/GridLayout"
-        android:layout_width="347dp"
-        android:layout_height="508dp"
+        android:layout_width="381dp"
+        android:layout_height="439dp"
         android:layout_below="@id/pilihKonversiTextView"
-        android:layout_margin="50dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="3dp"
         android:columnCount="2"
         android:rowCount="4">
-
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -38,10 +38,8 @@
             android:layout_rowWeight="1"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="5dp"
-            android:backgroundTint="@color/cardview_bg"
-            app:cardCornerRadius="20dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -52,20 +50,18 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/indonesian_flag" />
+                    android:id="@+id/idrFlagMain1"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:src="@mipmap/ic_launcher_indonesian_flag" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppinsbold"
+                    android:textColor="@color/black"
                     android:text="@string/idr_main"
                     android:textAlignment="center"
-                    android:textSize="18dp"
                     android:textStyle="bold" />
-
-
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -75,9 +71,9 @@
             android:layout_row="0"
             android:layout_rowWeight="1"
             android:layout_column="1"
-            android:layout_columnWeight="2"
-            android:backgroundTint="@color/cardview_bg"
-            app:cardCornerRadius="20dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -88,20 +84,18 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/american_flag" />
+                    android:id="@+id/usdFlagMain1"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:src="@mipmap/ic_launcher_american_flag" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppinsbold"
-                    android:text="@string/idr_main"
+                    android:textColor="@color/black"
+                    android:text="@string/usd_main"
                     android:textAlignment="center"
-                    android:textSize="18dp"
                     android:textStyle="bold" />
-
-
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -111,11 +105,9 @@
             android:layout_row="1"
             android:layout_rowWeight="1"
             android:layout_column="1"
-            android:layout_columnWeight="2"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/cardview_bg"
-            app:cardCornerRadius="20dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -126,20 +118,18 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/indonesian_flag" />
+                    android:id="@+id/idrFlagMain2"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:src="@mipmap/ic_launcher_indonesian_flag" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppinsbold"
+                    android:textColor="@color/black"
                     android:text="@string/idr_main"
                     android:textAlignment="center"
-                    android:textSize="18dp"
                     android:textStyle="bold" />
-
-
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -149,11 +139,9 @@
             android:layout_row="1"
             android:layout_rowWeight="1"
             android:layout_column="0"
-            android:layout_columnWeight="2"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="5dp"
-            android:backgroundTint="@color/cardview_bg"
-            app:cardCornerRadius="20dp"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="8dp">
 
             <LinearLayout
@@ -164,17 +152,17 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/american_flag" />
+                    android:id="@+id/usdFlagMain2"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:src="@mipmap/ic_launcher_american_flag" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppinsbold"
-                    android:text="@string/idr_main"
+                    android:textColor="@color/black"
+                    android:text="@string/usd_main"
                     android:textAlignment="center"
-                    android:textSize="18dp"
                     android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
