--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:text="@string/copyright"
-    android:textSize="18sp">
+    android:orientation="vertical"
+    tools:context=".ui.about.AboutFragment">
 
-</TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:justificationMode="inter_word"
+        android:layout_margin="16dp"
+        android:fontFamily="@font/poppinsregular"
+        android:text="@string/copyright"
+        android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:fontFamily="@font/poppinssemibold"
+        android:gravity="center_horizontal"
+        android:text="@string/cekMedSos"
+        android:textSize="18sp" />
+
+
+    <LinearLayout
+        android:id="@+id/aboutLayout"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/gitHubIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="8dp"
+            android:src="@drawable/ic_github" />
+
+        <ImageView
+            android:id="@+id/instagramIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="8dp"
+            android:src="@drawable/ic_instagram" />
+
+        <ImageView
+            android:id="@+id/linkedInIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="8dp"
+            android:src="@drawable/ic_linkedin" />
+    </LinearLayout>
+
+</LinearLayout>
