--- a/app/src/main/res/layout/fragment_convertion.xml
+++ b/app/src/main/res/layout/fragment_convertion.xml
@@ -116,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:textColor="@color/purple_700"
+            android:textColor="@color/blue_primary_variant"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
