--- a/app/src/main/res/layout/fragment_histori.xml
+++ b/app/src/main/res/layout/fragment_histori.xml
@@ -15,7 +15,9 @@
     <TextView
         android:id="@+id/emptyView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Data Masih Kosong" />
 
 
 </FrameLayout>
