--- a/app/src/main/res/layout/item_histori.xml
+++ b/app/src/main/res/layout/item_histori.xml
@@ -21,8 +21,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Rp > $" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -60,7 +59,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/saldoTextView"
+        android:id="@+id/hasilTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
