--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#00B1F6</color>
-    <color name="purple_500">#0509EC</color>
-    <color name="purple_700">#0509EC</color>
+    <color name="blue_primary">#00B1F6</color>
+    <color name="blue_primary_variant">#00B1F6</color>
     <color name="teal_200">#0319DA</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="usdToIDR_circle">#DFC30D</color>
     <color name="cardview_bg">#D5D4D4</color>
+    <color name="idrToUSD_circle">#006711</color>
 
 </resources>
