--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="org.d3if0043.konversimatauang.MainFragment"
+        android:name="org.d3if0043.konversimatauang.ui.main.MainFragment"
         android:label="Money Convertion"
         tools:layout="@layout/fragment_main" >
         <action
