--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
         tools:context=".ui.main.MainFragment">
 
@@ -18,7 +18,7 @@
             android:id="@+id/pilihKonversiTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="150dp"
             android:fontFamily="@font/poppinsbold"
             android:text="@string/konversi_textView"
             android:textColor="@color/black"
